<resources>
    <string name="app_name">My Sunny Portal</string>
    <string name="loading">Ładowanie…</string>
    <string name="title_activity_login">Zaloguj</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Zaloguj</string>
    <string name="e_mail">e-mail</string>
    <string name="password">hasło</string>
    <string name="connecting_server">Łączenie z serwerem…</string>
    <string name="remember_me">Zapamiętaj mnie</string>
    <string name="www_sunnyportal_com">www.sunnyportal.com</string>
    <string name="sunny_portal">Sunny Portal</string>
    <string name="instalation_view">Widok instalacji</string>
    <string name="energy_and_power">Energia i moc</string>
    <string name="Welcome">Witaj!</string>
    <string name="close">Zamknięte</string>
    <string name="open">Otwarte</string>
    <string name="log_out">Wyloguj</string>
    <string name="current_power_PV">Aktualna moc PV</string>
    <string name="current_instalation_state">Aktualny stan instalacji</string>
    <string name="energy_foto">Energii fotowoltanicznej</string>
    <string name="error_loaded">Błąd wczytywania</string>
    <string name="all_together">Łącznie:</string>
    <string name="reload">Odśwież</string>
    <string name="today">Dziś</string>
    <string name="power">Power</string>
    <string name="reduction_co2">Redukcja emisji CO2</string>


    <!--ERRORS -->
    <string name="ERROR_AUTHENTICATION">Uwierzytelnienie użytkownika nie powiodło się na serwerze</string>
    <string name="ERROR_BAD_URL">Błędny adres URL</string>
    <string name="ERROR_CONNECT">Nie udało się połączyć z serwerem</string>
    <string name="ERROR_FAILED_SSL_HANDSHAKE">Nie można wykonać uzgadniania protokołu SSL</string>
    <string name="ERROR_FILE">Ogólny błąd pliku</string>
    <string name="ERROR_FILE_NOT_FOUND">Nie znaleziono pliku</string>
    <string name="ERROR_HOST_LOOKUP">Wyszukiwanie nazwy hosta serwera lub proxy nie powiodło się</string>
    <string name="ERROR_IO">Nie można odczytać lub zapisać na serwerze</string>
    <string name="ERROR_PROXY_AUTHENTICATION">Uwierzytelnianie użytkownika nie powiodło się na serwerze proxy</string>
    <string name="ERROR_REDIRECT_LOOP">Zbyt wiele przekierowań</string>
    <string name="ERROR_TIMEOUT">Przekroczono limit czasu połączenia</string>
    <string name="ERROR_TOO_MANY_REQUESTS">Zbyt wiele żądań podczas tego ładowania</string>
    <string name="ERROR_UNKNOWN">Ogólny błąd</string>
    <string name="ERROR_UNSAFE_RESOURCE">Ładowanie zasobów zostało anulowane przez Safe Browsing</string>
    <string name="ERROR_UNSUPPORTED_AUTH_SCHEME">Nieobsługiwany schemat uwierzytelniania (nie podstawowy lub skrócony)</string>
    <string name="ERROR_UNSUPPORTED_SCHEME">Nieobsługiwany schemat URI</string>
    <string name="SAFE_BROWSING_THREAT_BILLING">Zasób został zablokowany, ponieważ może odszukać użytkownika do zawarcia umowy rozliczeniowej</string>
    <string name="SAFE_BROWSING_THREAT_MALWARE">The resource was blocked because it contains malware</string>
    <string name="SAFE_BROWSING_THREAT_PHISHING">Zasób został zablokowany, ponieważ zawiera zwodniczą treść</string>
    <string name="SAFE_BROWSING_THREAT_UNKNOWN">Zasób został zablokowany z nieznanego powodu</string>
    <string name="SAFE_BROWSING_THREAT_UNWANTED_SOFTWARE">Zasób został zablokowany, ponieważ zawiera niechciane oprogramowanie</string>
    <string name="check_internet_connection">Sprawdź połączenie z internetem</string>
    <string name="production_diagram">Production Diagram</string>
    <string name="load_diagram">Załaduj diagram</string>

</resources>
